--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,176 @@
-@import "tailwindcss";
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@import 'tailwindcss';
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  /* --- COLORES --- */
+  --color-primary-100: rgba(222, 226, 237, 1);
+  --color-primary-200: rgba(190, 198, 218, 1);
+  --color-primary-300: rgba(137, 152, 189, 1);
+  --color-primary-400: rgba(108, 127, 173, 1);
+  --color-primary-500: rgba(75, 92, 134, 1);
+  --color-primary-600: rgba(57, 70, 102, 1);
+  --color-primary-700: rgba(37, 45, 65, 1);
+  --color-primary-800: rgba(20, 25, 36, 1);
+
+  --color-neutral-100: rgba(235, 230, 224, 1);
+  --color-neutral-200: rgba(216, 206, 192, 1);
+  --color-neutral-300: rgba(184, 166, 142, 1);
+  --color-neutral-400: rgba(165, 138, 114, 1);
+  --color-neutral-500: rgba(130, 98, 78, 1);
+  --color-neutral-600: rgba(119, 73, 40, 1);
+  --color-neutral-700: rgba(83, 39, 19, 1);
+  --color-neutral-800: rgba(45, 21, 10, 1);
+  --color-neutral-shadow-500: rgba(45, 21, 10, 0.2);
+  --color-neutral-shadow-800: rgba(45, 21, 10, 0.6);
+
+  --color-success-100: rgba(224, 235, 226, 1);
+  --color-success-200: rgba(194, 214, 197, 1);
+  --color-success-300: rgba(145, 182, 151, 1);
+  --color-success-400: rgba(117, 163, 125, 1);
+  --color-success-500: rgba(83, 126, 91, 1);
+  --color-success-600: rgba(63, 95, 69, 1);
+  --color-success-700: rgba(44, 60, 42, 1);
+  --color-success-800: rgba(24, 33, 23, 1);
+
+  --color-warning-100: rgba(248, 235, 211, 1);
+  --color-warning-200: rgba(240, 216, 168, 1);
+  --color-warning-300: rgba(229, 184, 98, 1);
+  --color-warning-400: rgba(222, 167, 58, 1);
+  --color-warning-500: rgba(179, 129, 30, 1);
+  --color-warning-600: rgba(136, 97, 23, 1);
+  --color-warning-700: rgba(78, 58, 24, 1);
+  --color-warning-800: rgba(43, 32, 13, 1);
+
+  --color-error-100: rgba(244, 215, 216, 1);
+  --color-error-200: rgba(232, 176, 177, 1);
+  --color-error-300: rgba(214, 112, 114, 1);
+  --color-error-400: rgba(204, 76, 78, 1);
+  --color-error-500: rgba(163, 46, 48, 1);
+  --color-error-600: rgba(123, 35, 36, 1);
+  --color-error-700: rgba(100, 4, 2, 1);
+  --color-error-800: rgba(55, 2, 1, 1);
+  --color-error-shadow-800: rgba(55, 2, 1, 0.6);
+
+  /* --- FUENTES --- */
+  --font-sans: 'Roboto', Helvetica, sans-serif;
+
+  /* --- ESPACIADOS Y TAMAÑOS --- */
+  --spacing-xs: 4px;
+  --spacing-s: 8px;
+  --spacing-m: 16px;
+  --spacing-l: 24px;
+  --spacing-xl: 32px;
+  --spacing-xxl: 40px;
+  --spacing-xxxl: 48px;
+  --spacing-book-sm: 125px;
+  --spacing-book-md: 175px;
+  --spacing-book-lg: 225px;
+
+  /* --- SOMBRAS --- */
+  --shadow-default: 0px 4px 4px 0px rgba(45, 21, 10, 0.2);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer components {
+  .all-\[unset\] {
+    all: unset;
+  }
+
+  /* --- UTILIDADES DE TIPOGRAFÍA COMPUESTAS --- */
+  .text-display-large {
+    font-size: 57px;
+    line-height: 64px;
+    font-weight: 400;
+    letter-spacing: -0.25px;
+  }
+  .text-display-medium {
+    font-size: 45px;
+    line-height: 52px;
+    font-weight: 400;
+    letter-spacing: 0px;
+  }
+  .text-display-small {
+    font-size: 36px;
+    line-height: 44px;
+    font-weight: 400;
+    letter-spacing: 0px;
+  }
+
+  .text-headline-large {
+    font-size: 32px;
+    line-height: 40px;
+    font-weight: 400;
+    letter-spacing: 0px;
+  }
+  .text-headline-medium {
+    font-size: 28px;
+    line-height: 36px;
+    font-weight: 400;
+    letter-spacing: 0px;
+  }
+  .text-headline-small {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 400;
+    letter-spacing: 0px;
+  }
+
+  .text-title-large {
+    font-size: 22px;
+    line-height: 28px;
+    font-weight: 400;
+    letter-spacing: 0px;
+  }
+  .text-title-medium {
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+    letter-spacing: 0.15000000596046448px;
+  }
+  .text-title-small {
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 500;
+    letter-spacing: 0.10000000149011612px;
+  }
+
+  .text-body-large {
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    letter-spacing: 0.5px;
+  }
+  .text-body-medium {
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 400;
+    letter-spacing: 0.25px;
+  }
+  .text-body-small {
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: 400;
+    letter-spacing: 0px;
+  }
+
+  .text-label-large {
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 500;
+    letter-spacing: 0.10000000149011612px;
+  }
+  .text-label-medium {
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+  }
+  .text-label-small {
+    font-size: 11px;
+    line-height: 16px;
+    font-weight: 500;
+    letter-spacing: 0.5px;
   }
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: theme(fontFamily.sans), sans-serif;
 }
